<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="@dimen/display_text"
        android:textStyle="bold"
        tools:text="12+31"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_clear"
            android:textSize="@dimen/button_text"
            />
        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_divide"
            android:textSize="@dimen/button_text"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_7"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_8"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_9"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_times"
            android:textSize="@dimen/button_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_4"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_5"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_6"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_minus"
            android:textSize="@dimen/button_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_1"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_2"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_3"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_plus"
            android:textSize="@dimen/button_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_point"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_0"
            android:textSize="@dimen/button_text"
            />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:text="@string/_equal"
            android:textSize="@dimen/button_text"
            />
    </LinearLayout>
</LinearLayout>
